<resources>
    <string name="app_name">Tic Tac Toe!</string>
    <string name="button0">button0</string>
    <string name="button1">button1</string>
    <string name="button2">button2</string>
    <string name="button3">button3</string>
    <string name="button4">button4</string>
    <string name="button5">button5</string>
    <string name="button6">button6</string>
    <string name="button7">button7</string>
    <string name="button8">button8</string>
    <string name="carrot_s_turn">Carrot\'s turn</string>
    <string name="restartButton">Restart</string>
    <string name="gridImage">gridImage</string>
    <string name="farmImage">farmImage</string>

</resources>