<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#44510C"
    android:visibility="visible"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleView"
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="40sp"
        android:fontFamily="serif"
        android:text="@string/app_name"
        android:textColor="#D5C1A9"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/topLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/gridImage"
        android:contentDescription="@string/gridImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/farm_grid"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@+id/titleView"
        app:layout_constraintBottom_toBottomOf="@+id/topLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_margin="5dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="@+id/gridImage"
        app:layout_constraintBottom_toBottomOf="@+id/gridImage"
        app:layout_constraintStart_toStartOf="@+id/gridImage"
        app:layout_constraintEnd_toEndOf="@+id/gridImage">

        <LinearLayout
            android:id="@+id/firstLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/button0Image"
                android:contentDescription="@string/button0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:layout_constraintDimensionRatio="1:1"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:tag="0" />

            <ImageView
                android:id="@+id/button1Image"
                android:contentDescription="@string/button1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:layout_constraintDimensionRatio="1:1"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:tag="1" />

            <ImageView
                android:id="@+id/button2Image"
                android:contentDescription="@string/button2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:layout_constraintDimensionRatio="1:1"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:tag="2" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/button3Image"
                android:layout_width="139dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/button3"
                android:padding="10dp"
                android:tag="3"
                app:layout_constraintDimensionRatio="1:1" />

            <ImageView
                android:id="@+id/button4Image"
                android:contentDescription="@string/button4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:layout_constraintDimensionRatio="1:1"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:tag="4" />

            <ImageView
                android:id="@+id/button5Image"
                android:contentDescription="@string/button5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:layout_constraintDimensionRatio="1:1"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:tag="5" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/thirdLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/button6Image"
                android:contentDescription="@string/button6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:layout_constraintDimensionRatio="1:1"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:tag="6" />

            <ImageView
                android:id="@+id/button7Image"
                android:contentDescription="@string/button7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:layout_constraintDimensionRatio="1:1"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:tag="7" />

            <ImageView
                android:id="@+id/button8Image"
                android:contentDescription="@string/button8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:layout_constraintDimensionRatio="1:1"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:tag="8" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/statusGame"
        android:contentDescription="@string/carrot_s_turn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0.5sp"
        android:fontFamily="serif"
        android:text="@string/carrot_s_turn"
        android:textColor="#8BC34A"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/gridImage"
        app:layout_constraintBottom_toTopOf="@+id/restartButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/restartButton"
        android:contentDescription="@string/restartButton"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:background="@drawable/restart_button"
        android:fontFamily="serif"
        android:text="@string/restartButton"
        android:textColor="#0B0A0A"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/statusGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/farmImage"
        android:contentDescription="@string/farmImage"
        android:layout_width="460dp"
        android:layout_height="59dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/titleView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/farm" />

</androidx.constraintlayout.widget.ConstraintLayout>